--- a/index.html
+++ b/index.html
@@ -95,6 +95,23 @@ button:hover {
   font-size: 18px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 }
+  .qty-control {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin-top: 6px;
+}
+
+.qty-control button {
+  padding: 4px 10px;
+  font-size: 16px;
+}
+
+.qty-control span {
+  min-width: 20px;
+  text-align: center;
+  font-weight: bold;
+}
 </style>
 </head>
 
@@ -120,10 +137,17 @@ button:hover {
 <div class="menu-item">
   <div class="menu-info">
     <h3>Masala Omelette</h3>
-    <span class="desc">Indian-style omelette with onions, tomatoes & spices</span>
+    <span class="desc">Indian-style omelette with onions & spices</span>
     <p>₹89</p>
+
+    <div class="qty-control">
+      <button onclick="changeQty('Masala Omelette', -1)">−</button>
+      <span id="qty-Masala Omelette">1</span>
+      <button onclick="changeQty('Masala Omelette', 1)">+</button>
+    </div>
   </div>
-  <button onclick="addToCart('Masala Omelette',89)">Add</button>
+
+  <button onclick="addToCart('Masala Omelette', 89)">Add</button>
 </div>
 
 <div class="menu-item">
@@ -280,4 +304,5 @@ button:hover {
 <script src="script.js"></script>
 </body>
 </html>
+
 
