--- a/index.html
+++ b/index.html
@@ -139,13 +139,10 @@ button:hover {
     <h3>Masala Omelette</h3>
     <span class="desc">Indian-style omelette with onions & spices</span>
     <p>₹89</p>
-          <button onclick="changeQty('masala_omelette', -1)">−</button>
-      <span id="masala_omelette">0</span>
-      <button onclick="changeQty('masala_omelette', 1)">+</button>
-  </div>
+  <div class="qty"><button onclick="changeQty('m1',-1)">-</button><span id="m1">0</span><button onclick="changeQty('m1',1)">+</button></div>
   <button onclick="addToCart('Masala Omelette', 89, 'masala_omelette')">Add</button>
-</div>
-  
+ </div>
+  </div>
 <div class="menu-item">
   <div class="menu-info">
     <h3>Vegetable Omelette</h3>
@@ -300,6 +297,7 @@ button:hover {
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
