--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@ button:hover {
     <span class="desc">Indian-style omelette with onions & spices</span>
     <p>₹89</p>
   <div class="qty"><button onclick="changeQty('m1',-1)">-</button><span id="m1">0</span><button onclick="changeQty('m1',1)">+</button></div>
-  <button onclick="addToCart('Masala Omelette', 89, 'masala_omelette')">Add</button>
- </div>
+     </div>
+  <button onclick="addToCart('Masala Omelette', 89, 'm1')">Add</button>
   </div>
+  
 <div class="menu-item">
   <div class="menu-info">
     <h3>Vegetable Omelette</h3>
@@ -297,6 +298,7 @@ button:hover {
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
