--- a/index.html
+++ b/index.html
@@ -95,22 +95,19 @@ button:hover {
   font-size: 18px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 }
-  .qty-control {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  margin-top: 6px;
+.qty {
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
 }
-
-.qty-control button {
-  padding: 3px 9px;
-  font-size: 16px;
+.qty button {
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
 }
-
-.qty-control span {
-  min-width: 20px;
-  text-align: center;
-  font-weight: bold;
+.qty span {
+    margin: 0 10px;
+    font-size: 16px;
 }
 </style>
 </head>
@@ -298,6 +295,7 @@ button:hover {
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
