--- a/index.html
+++ b/index.html
@@ -1,116 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
 <title>Gather Game Café</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #2b1a0e;
-}
-.overlay {
-  background: #f5ecd8;
-  min-height: 100vh;
-  padding: 20px;
-}
-h1 {
-  text-align: center;
-}
-.menu-item {
-  background: #fff8ee;
-  border: 1px solid #c2a476;
-  border-radius: 8px;
-  padding: 12px;
-  margin-bottom: 12px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.menu-info h3 {
-  margin: 0;
-}
-.desc {
-  font-size: 13px;
-  font-style: italic;
-}
-.qty-control {
-  display: flex;
-  gap: 6px;
-  margin-top: 6px;
-}
-.qty-control button {
-  padding: 4px 10px;
-  font-size: 16px;
-}
-.qty-value {
-  min-width: 20px;
-  text-align: center;
-  font-weight: bold;
-}
-.cart-btn {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: green;
-  color: white;
-  padding: 14px 26px;
-  border-radius: 30px;
-  text-decoration: none;
-}
+body { font-family: Arial; background:#f5ecd8; padding:20px; }
+.menu-item { background:#fff; padding:12px; margin-bottom:12px; border-radius:8px; display:flex; justify-content:space-between; }
+.qty-control { display:flex; gap:8px; }
+.qty-value { font-weight:bold; }
+button { padding:6px 12px; }
 </style>
 </head>
-
 <body>
-<div class="overlay">
 
 <h1>🎲 Gather Game Café</h1>
 
-<!-- ITEM 1 -->
 <div class="menu-item">
-  <div class="menu-info">
+  <div>
     <h3>Masala Omelette</h3>
-    <span class="desc">Sunny side-up or over easy</span>
     <p>₹89</p>
-
     <div class="qty-control">
       <button type="button" onclick="changeQty(this,-1)">−</button>
       <span class="qty-value">1</span>
       <button type="button" onclick="changeQty(this,1)">+</button>
     </div>
   </div>
-
-  <button type="button"
-    onclick="addToCartFromUI(this,'Masala Omelette',89)">
-    Add
-  </button>
+  <button onclick="addToCartFromUI(this,'Masala Omelette',89)">Add</button>
 </div>
 
-<!-- ITEM 2 -->
 <div class="menu-item">
-  <div class="menu-info">
+  <div>
     <h3>Filter Coffee</h3>
     <p>₹49</p>
-
     <div class="qty-control">
       <button type="button" onclick="changeQty(this,-1)">−</button>
       <span class="qty-value">1</span>
       <button type="button" onclick="changeQty(this,1)">+</button>
     </div>
   </div>
-
-  <button type="button"
-    onclick="addToCartFromUI(this,'Filter Coffee',49)">
-    Add
-  </button>
+  <button onclick="addToCartFromUI(this,'Filter Coffee',49)">Add</button>
 </div>
 
-<a href="cart.html" class="cart-btn">🛒 Go to Cart</a>
-
-</div>
+<a href="cart.html">🛒 Go to Cart</a>
 
 <script src="script.js"></script>
 </body>
