--- a/cart.html
+++ b/cart.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Your Cart</title>
+<title>Your Order</title>
 </head>
 <body>
 
 <h1>Your Order</h1>
 <div id="cartItems"></div>
-
 <button onclick="placeOrder()">Place Order</button>
 
 <script src="script.js"></script>
