--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gather Game Café</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Gather Game Café</title>
 <style>
-body { font-family: Arial; background:#f5ecd8; padding:20px; }
+body { font-family: Arial; padding: 20px; background:#f5ecd8; }
 .menu-item { background:#fff; padding:12px; margin-bottom:12px; border-radius:8px; display:flex; justify-content:space-between; }
 .qty-control { display:flex; gap:8px; }
 .qty-value { font-weight:bold; }
