--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
 <title>Admin POS</title>
 <style>
 body { font-family: Arial; background:#f2f2f2; }
-.order-box { background:#fff; padding:14px; margin:14px; border:2px solid #333; }
+.table-box { background:#fff; padding:14px; margin:14px; border:2px solid #333; }
 .invoice { border:1px solid #000; padding:10px; margin-top:10px; }
 .line { display:flex; justify-content:space-between; }
 @media print {
@@ -26,3 +26,4 @@ body { font-family: Arial; background:#f2f2f2; }
 <script src="script.js"></script>
 </body>
 </html>
+
