--- a/admin.html
+++ b/admin.html
@@ -4,9 +4,25 @@
 <title>Admin POS</title>
 <style>
 body { font-family: Arial; background:#f2f2f2; }
-.table-box { background:#fff; padding:14px; margin:14px; border:2px solid #333; }
-.invoice { border:1px solid #000; padding:10px; margin-top:10px; }
-.line { display:flex; justify-content:space-between; }
+.table-box {
+  background:#fff;
+  padding:14px;
+  margin:14px;
+  border:2px solid #333;
+}
+.invoice {
+  border:1px solid #000;
+  padding:10px;
+  margin-top:10px;
+}
+.line {
+  display:flex;
+  justify-content:space-between;
+}
+button, select {
+  margin-top:6px;
+  padding:6px 10px;
+}
 @media print {
   body * { visibility:hidden; }
   .invoice, .invoice * { visibility:visible; }
@@ -19,8 +35,9 @@ body { font-family: Arial; background:#f2f2f2; }
 <div id="orders"></div>
 
 <h2>📊 Reports</h2>
-<button onclick="exportExcel()">Export Daily Excel</button>
-<button onclick="loadMonthly()">Monthly Summary</button>
+<button onclick="exportDailySummaryExcel()">📅 Day-wise Excel</button>
+<button onclick="exportMonthlyExcel()">📆 Monthly Excel</button>
+<button onclick="loadMonthly()">📊 Monthly Summary (Screen)</button>
 <div id="report"></div>
 
 <script src="script.js"></script>
